# cmake_minimum_required(VERSION 2.8.3)
# project(slam_planner_sdk)

# find_package(catkin REQUIRED)

# find_path(slam_planner_INCLUDE_DIR nav/MoveBaseConfig.h ${PROJECT_SOURCE_DIR}/include)
# find_path(slam_planner_LIBRARY libunitree_legged_sdk.so ${PROJECT_SOURCE_DIR}/lib)
# find_path(legged_sdk_INCLUDE_DIR unitree_legged_sdk/comm.h ${PROJECT_SOURCE_DIR}/include)


# if(slam_planner_INCLUDE_DIR AND slam_planner_LIBRARY)
#     set(slam_planner_sdk_FOUND true)
# else(slam_planner_INCLUDE_DIR AND slam_planner_LIBRARY)
#     set(slam_planner_sdk_FOUND false)
# endif(slam_planner_INCLUDE_DIR AND slam_planner_LIBRARY)

# if(legged_sdk_INCLUDE_DIR)
#     set(legged_sdk_INCLUDE_DIR true)
# else(legged_sdk_INCLUDE_DIR)
#     set(legged_sdk_INCLUDE_DIR false)
# endif(legged_sdk_INCLUDE_DIR)
