<?xml version="1.0"?>
<package format="2">
  <name>start</name>
  <version>1.0.0</version>
  <description>The start package</description>

  <author>CLEAR LAB</author>
  <maintainer email="1020511665@qq.com">CLEAR LAB</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <exec_depend>message_runtime</exec_depend>

</package>
